# phone_book

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
phone_book/: controllers.py  redis_manager.py  settings.py
