[project]
name = "phone-book"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "fastapi[standard] (>=0.123.10,<0.124.0)",
    "redis (>=7.1.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "envparse (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
